# SkiaTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mgg/skiatest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CommonPool.cc  CommonPool.h  DisplayParams.h  EglManager.cc  EglManager.h  Frame.cc  Frame.h  GLWindowContext.cc  GLWindowContext.h  GLWindowContext_android.cpp  NativeChoreographer.cc  NativeChoreographer.h  Result.h  SkiaDrawView.cc  TestData.cc  TestData.h  VsyncWaiter.cc  WindowContext.cc  WindowContext.h  WindowContextFactory_android.h  android_debug.h  load_library.cc  native-lib.cpp
app/src/main/cpp/androidkit/: Canvas.cpp  ColorFilters.cpp  Gradients.cpp  Image.cpp  ImageFilter.cpp  Matrix.cpp  Paint.cpp  Path.cpp  PathBuilder.cpp  RuntimeShaderBuilder.cpp  Shader.cpp  Surface.cpp  Surface.h  SurfaceThread.cpp  SurfaceThread.h  Utils.cpp  Utils.h
app/src/main/cpp/checkenv/: CheckEglEnvironment.cc  CheckEglEnvironment.h  ExtensionSet.cc  ExtensionSet.h
app/src/main/cpp/choreographer/: NativeChoreographer.cc
app/src/main/cpp/common/: types.h
app/src/main/cpp/commonpool/: CommonPool.h
app/src/main/cpp/debug/: android_debug.h
app/src/main/cpp/egl/: EglManager.cc  EglManager.h
app/src/main/cpp/exception/: exception_helper.cpp  exception_helper.h
app/src/main/cpp/impl/: managed.cc
app/src/main/cpp/renderengine/: DisplaySettings.h  RenderEngineCreationArgs.h  SkiaGLRenderEngine.cc  SkiaGLRenderEngine.h  SkiaGLRenderEngineStatic.cpp
app/src/main/cpp/test/: TestData.cc  TestData.h
app/src/main/cpp/utils/: ColorMode.h  Errors.h  Macros.h  Result.h  Timing.h
app/src/main/java/com/mgg/skiatest/: AnimationRenderer.java  AsyncWaitForVsyncDelegate.java  CheckEglEnvironment.java  DemoRuntimeShaderRenderer.java  FrameCallback.java  MainActivity.kt  MyGLRenderer.java  NativeChoreographer.java  SkiaDrawView.java  TestData.java  VsyncWaiter.java
app/src/main/java/com/mgg/skiatest/java/impl/: Cleanable.java  Library.java  Log.java  Managed.java  Native.java  ReferenceUtil.java  Stats.java
app/src/main/java/org/skia/androidkit/: Canvas.java  Gradient.java  Image.java  ImageFilter.java  LinearGradient.java  Paint.java  RadialGradient.java  Surface.java  SweepGradient.java  TwoPointConicalGradient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/skiatest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
